<?xml version="1.0"?>
<package format="2">
  <name>industrial_reconstruction</name>
  <version>0.0.0</version>
  <description>A ROS2 reconstruction utility leveraging TSDF from Open3D</description>

  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
  <maintainer email="tyler.marr@swri.org">Tyler Marr</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>industrial_reconstruction_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
