<?xml version="1.0"?>
<package format="2">
  <name>open3d_interface</name>
  <version>0.0.0</version>
  <description>A collection of ROS interfaces for Open3D</description>

  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
  <maintainer email="tyler.marr@swri.org">Tyler Marr</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>open3d_interface_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
